@@ -115,7 +115,7 @@ class JRouter extends JObject
 	/**
 	 *  Function to convert a route to an internal URI
 	 */
-	public static function parse(&$uri)
+	public function parse(&$uri)
 	{
 		$vars = array();
 
